--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"vitest": "^0.25.3"
 	},
 	"dependencies": {
-		"date-fns": "^2.30.0"
+		"date-fns": "^2.30.0",
+		"svelte-french-toast": "^1.2.0"
 	}
 }
