--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"dependencies": {
 		"date-fns": "^2.30.0",
-		"svelte-french-toast": "^1.2.0"
+		"svelte-french-toast": "^1.2.0",
+		"svelte-markdown": "^0.4.0"
 	}
 }
