--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"eslint-plugin-svelte": "^2.26.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
+		"svelte": "^4.2.1",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -33,6 +33,7 @@
 		"vitest": "^0.25.3"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.36.0",
 		"date-fns": "^2.30.0",
 		"svelte-french-toast": "^1.2.0",
 		"svelte-markdown": "^0.4.0"
